[GTK] Theming of authentication dialog breaks with themes other than Adwaita https://bugs.webkit.org/show_bug.cgi?id=190117

Reviewed by Michael Catanzaro.

Adds the missing GTK_STYLE_CLASS_BACKGROUND to the WebKitWebViewDialog
widget, which was missing for GTK+ 3.20 or newer, and set the widget
as app-paintable to avoid the base class paint method to add an opaque
background.

Thanks to Benjamin Otte for the guidance to debug the theming issues.

* UIProcess/API/gtk/WebKitWebViewDialog.cpp:
(webkitWebViewDialogDraw): Remove the style context save/restore, it
is unneeded because the style classes are set at widget construction
time and not changed ever after.
(webkitWebViewDialogConstructed): Mark the widget as app-paintable to
avoid the base widget paint operation to fill the whole background,
because the dialog widget paints the translucent overlay itself; and
also add the missing GTK_STYLE_CLASS_BACKGROUND class at construction
when building against GTK+ 3.20 or newer.


Canonical link: https://commits.webkit.org/205147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236731 268f45cc-cd09-0410-ab3c-d52691b4dbfc